kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dp-service
spec:
  selector:
    app: dp-app-pod
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
